# django-model-changes

./: .coveragerc  .editorconfig  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  pyrightconfig.json  pytest.ini  runtests.py  setup.py  tox.ini
.github/workflows/: publish.yaml
django_model_changes/: __init__.py  _version.py  changes.py  signals.py
docs/: Makefile
docs/source/: conf.py  django_model_changes.rst  index.rst
tests/: __init__.py  apps.py  models.py  settings.py  test_e2e_django_project.py  test_formatting.py  test_typecheck.py  tests.py
